--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.15.12",
     "typescript": "~5.7.2",
-    "vite": "^6.3.1"
+    "vite": "^6.3.5"
   }
 }
