--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^5.3.1",
+    "clean-css-cli": "^5.6.3",
     "imagemin": "^9.0.1",
     "imagemin-webp": "^8.0.0",
+    "terser": "^5.39.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
